atualização das variavel

--- a/css/Meus_Projetos.css
+++ b/css/Meus_Projetos.css
@@ -1,5 +1,5 @@
 .content_Project h1 span {
-    background: var(--gradiente);
+    background: var(--color1R);
     background-clip: text;
     color: transparent;
 }
