--- a/css/Apresentação_Pessoal.css
+++ b/css/Apresentação_Pessoal.css
@@ -23,7 +23,7 @@
 }
 
 .contet_description h1 span {
-    background: var(--gradiente);
+    background: var(--color1R);
     background-clip: text;
     color: transparent;
 }
@@ -40,7 +40,11 @@
     font-weight: 400;
     margin: 20px 0;
     text-align: justify;
-
+    
+    /* CORDA LETRA EM BOLD  */
+    b{
+        color: var(--color3R);
+    }
 
 }
 
@@ -53,7 +57,7 @@
     justify-content: right;
     position: relative;
     overflow: hidden;
-    background: var(--gradiente);
+    background: var(--color1R);
 }
 
 
@@ -149,7 +153,7 @@
     overflow: hidden;
     border: none;
     outline: none;
-    background:var(--gradiente);
+    background:var(--color1R);
     transition: .6s;
 }
 .btn_information:hover{
