--- a/css/Meus_Serviços.css
+++ b/css/Meus_Serviços.css
@@ -16,7 +16,7 @@
     
 }
 .content_title h1 span{
-    background: var(--gradiente);
+    background: var(--color1R);
     background-clip: text;
     color: transparent;
 }
