atualização das header cabecalho

--- a/css/contato.css
+++ b/css/contato.css
@@ -41,6 +41,7 @@ textarea {
     padding: 15px;
     position: relative;
     display: flex;
+    /* color: var(--color7); */
     align-items: center;
     justify-content: center;
     z-index: 1;
@@ -49,10 +50,6 @@ textarea {
     cursor: pointer;
     font-size: 15px;
 
-}
-
-.form button:hover:before {
-    width: 100%;
 }
 
 @media (max-width: 450px) {
