--- a/css/header.css
+++ b/css/header.css
@@ -38,6 +38,7 @@ body {
 /* ======================= header ==============*/
 .content {
     width: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: left;
@@ -49,6 +50,24 @@ body {
     height: 100%;
     object-fit: cover;
 }
+.content_welcome{
+    margin-left: 30px;
+    top: 150px;
+    position: absolute;
+    color: var(--color8);
+}
+.content_welcome h1{
+    font-size: 50px;
+    text-shadow: 1px 1px 3px rgba(255,255, 255, .5);
+}
+.content_welcome{
+    font-size: 25px;
+    text-shadow: 1px 1px 3px rgba(255,255, 255, .5);
+
+}
+
+
+
 /*=============================== formatão menu  ================  */
 .content_menu {
     position: sticky;
